cluster-apps/traefik/dashboard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.<your-domain>`)
      kind: Rule
      middlewares:
        - name: traefik-dashboard-basicauth
        - name: strip-auth-header
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: default-cert-production-tls
